# Bigdata

./: .gitignore  CHANGELOG.md  README.md  categories.csv  cpi_calculator.py  csv_charset_checker.py  csv_header_remover.py  daily_prices_20250517.csv  daily_prices_20250518.csv  daily_prices_20250519.csv  environment.yml  products.csv  pyproject.toml  requirements.txt
docs/: README.md
docs/cpi_calculator/: README.md  schemas.md
docs/data_generator/: README.md  price_generator.md
docs/images/: README.md
integrated_tests/sample/: README.md
project_name/: settings.yml
raw/: categories_offical_raw.docx  categories_raw.txt
src/: __main__.py
src/cpi_calculator/: __init__.py  __main__.py  calculator.py  config.py  config.yaml  loader.py  schemas.py  settings.yml  visualizer.py
src/data_generator/: category_generator.py  price_generator.py  product_generator.py
tests/cpi_calculator/: test_calculator.py  test_cisualizer.py  test_loader.py  test_main.py
tests/data_generator/: test_price_generator.py
tests/sample/: README.md
